// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock component does not include SectionHeader when there's no title 1`] = `
<div
  className="content-block"
>
  <Figure
    alignment="right-collapse"
    alt="cool image of http://image.com"
    image="http://image.com/?fit=fill&h=600&w=600"
    imageClassName={null}
    size="one-third"
  >
    <TextContent
      className={null}
      classNameByEntry={Object {}}
      classNameByEntryDefault={null}
      styles={Object {}}
    >
      Test Content
    </TextContent>
  </Figure>
</div>
`;

exports[`ContentBlock component is rendered with the proper child components when image is set 1`] = `
<div
  className="content-block"
>
  <SectionHeader
    superTitle="Test Super Title"
    title="Test Title"
    underlined={true}
  />
  <Figure
    alignment="right-collapse"
    alt="cool image of http://image.com"
    image="http://image.com/?fit=fill&h=600&w=600"
    imageClassName={null}
    size="one-third"
  >
    <TextContent
      className={null}
      classNameByEntry={Object {}}
      classNameByEntryDefault={null}
      styles={Object {}}
    >
      Test Content
    </TextContent>
  </Figure>
</div>
`;

exports[`ContentBlock component it works beautifully with content and an empty image prop 1`] = `
<div
  className="content-block"
>
  <TextContent
    className={null}
    classNameByEntry={Object {}}
    classNameByEntryDefault={null}
    styles={Object {}}
  >
    hi there
  </TextContent>
</div>
`;
